--- a/task5/index.html
+++ b/task5/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>JS-Start. 3 задача</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <form action="#">
