--- a/task4/index.html
+++ b/task4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JS-Start. 4 задача</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <a href="#">Измените текст ссылки</a>
